"Solar System": fix a bug on Android
Fix a layout bug on Android devices where the <html> container was
not respecting the 100% height rule after a full page scroll.

--- a/Solar_System/styles.css
+++ b/Solar_System/styles.css
@@ -21,8 +21,8 @@ a {
 
 html {
     display: flex;
-    height: 100%; /*fallback*/
-    height: -webkit-fill-available;
+    min-height: 100%; /*fallback*/
+    min-height: -webkit-fill-available;
     overflow-x: hidden;
 }
 body {
